# Agent-Learning

./: CLAUDE.md  README.md  pyproject.toml
ReAct/: core.py  testAPI.py
langchain/: 01_环境搭建与核心概念.ipynb  02_Prompt_Templates.ipynb  03_LCEL链式表达式.ipynb  04_Memory对话历史与状态管理.ipynb  05_Retrieval_RAG.ipynb  06_Agents工具调用与自主决策.ipynb  07_生产实践.ipynb  总结_LangChain核心思想.md
langgraph/: 01_环境搭建与核心概念.ipynb  02_State设计.ipynb  03_条件分支与循环.ipynb  04_工具调用Agent.ipynb  05_Human-in-the-Loop.ipynb  06_多Agent协作.ipynb  07_持久化与检查点.ipynb  总结_LangGraph核心思想.md
llamaindex/: 01_环境搭建与核心概念.ipynb  02_文档加载与索引构建.ipynb  03_查询引擎与响应合成.ipynb  04_向量存储与持久化.ipynb  05_高级检索策略.ipynb  06_对话引擎与多文档Agent.ipynb  07_生产实践与完整项目.ipynb  总结_LlamaIndex核心思想.md
neo4j/: 01_环境搭建与图数据库核心概念.ipynb  02_Cypher查询语言.ipynb  03_数据建模与批量导入.ipynb  04_LangChain_Neo4j集成.ipynb  05_LLM知识图谱自动构建.ipynb  06_GraphRAG图增强检索.ipynb  07_图驱动Agent与生产实践.ipynb  总结_Neo4j与知识图谱核心思想.md
