[project]
name = "agent-learn"
version = "0.1.0"
description = "LangChain、LangGraph、LlamaIndex、Neo4j 系统学习项目"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.22",
    "langchain-openai>=1.1.12",
    "langchain-anthropic",
    "langgraph>=1.1.3",
    "python-dotenv>=1.0.0",
    # LlamaIndex
    "llama-index-core",
    "llama-index-llms-openai",
    "llama-index-llms-anthropic",
    "llama-index-embeddings-openai",
    "llama-index-vector-stores-faiss",
    "llama-index-readers-file",
    "llama-index-retrievers-bm25",
    # Neo4j
    "neo4j>=5.28.0",
    "langchain-neo4j>=0.9.0",
    "langchain-experimental>=0.4.0",
]
